kubernetes/infra/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
spec:
  addresses:
    - type: IPAddress
      value: 10.3.1.3
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      hostname: '*.peterson.com.ar'
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: '*.peterson.com.ar'
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: peterson-com-ar-tls
    - name: mqtts
      protocol: TLS
      port: 8883
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: peterson-com-ar-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
spec:
  addresses:
    - type: IPAddress
      value: 10.3.1.4
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      hostname: '*.lan.peterson.com.ar'
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: '*.lan.peterson.com.ar'
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: lan-peterson-com-ar-tls
    - name: mqtt
      protocol: TCP
      port: 1883
      allowedRoutes:
        namespaces:
          from: All
