kubernetes/infra/cilium/whoami.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-whoami
  namespace: whoami
spec:
  parentRefs:
    - name: my-gateway
      namespace: infra-gateway
      sectionName: http
  rules:
    - backendRefs:
        - name: whoami
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: whoami
    service: whoami
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-http
  namespace: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
